--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,4 +1,4 @@
-name: Autograding Tests
+exname: Autograding Tests
 'on':
 - push
 - repository_dispatch
@@ -19,7 +19,7 @@ jobs:
       with:
         test-name: Quiz 1
         setup-command: ''
-        command: Which of the following best describes software engineering?
+        command: echo" Which of the following best describes software engineering?"
         input: b
           a) The study of hardware components
           b) The process of designing, developing, and maintaining software
